test/spec_vectors/simd_bit_shift/fail/module_10.wat
(module (func (result v128) (i32x4.shr_u (i32.const 0) (i32.const 0))))